--- a/src/componenets/button/index.scss
+++ b/src/componenets/button/index.scss
@@ -10,6 +10,7 @@
         &:hover {
             cursor: pointer;
             scale: 50%;
+            border-color: darken($color: gray, $amount: 50%);
             transition: .5s;
         }
     }
